# IreneBot

./: .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  Utility.py  commands.json  db_structure.sql  irene_credentials.json  keys.py  locale_by_timezone.json  logo.spec  main.py  monitor_run.py  patch_notes_V1.03.md  pyproject.toml  requirements.txt  run.py  run.spec  server.py  update_run.bat
.github/: FUNDING.yml
API/: README.md  drive.js  index.js  package-lock.json  package.json  run.py
Emoji/: placeholder.txt
LavaLinkServer/: .gitignore  README.md  application_example.yml
Logs/: placeholder.txt
Photos/: placeholder.txt
Videos/: placeholder.txt
cogs/: __init__.py  helper.py
irenebot-com/: api.html  commands.html  index.html  index.js  package-lock.json  package.json  statistics.html
languages/: README.md  en_us.json
models/: BaseRoundGame.py  BaseScoreGame.py  BiasGame.py  BlackJackGame.py  BotUser.py  Bracket.py  CommandTypes.py  DbConn.py  Game.py  GameBase.py  GroupGuessingGame.py  GuessingGame.py  PgConn.py  StatsTracker.py  UnscrambleGame.py  User.py  __init__.py  bot.py  views.py
module/: Archive.py  BiasGame.py  BlackJack.py  BlackJack_OLD.py  BotMod.py  BotOwner.py  BotSites.py  Cogs.py  Currency.py  Currency_NEW.py  CustomCommands.py  DataMod.py  DreamCatcher.py  Gacha.py  Games.py  GroupMembers.py  GuessingGame.py  Help.py  ImageUploader.py  Interactions.py  LastFM.py  Logging.py  Miscellaneous.py  Moderator.py  Music.py  MusicOLD.py  Profile.py  Reminder.py  SelfAssignRoles.py  Testing.py  TopGG.py  Twitch.py  Twitter.py  Twitter2.py  UnScramble.py  Vlive.py  Weverse.py  Wolfram.py  Youtube.py  __init__.py  (+12 more)
music/: placeholder.txt
patch notes/: patch_notes_V1.03.2.md  (+2 more)
(+293 files in other folders)
