[tool.poetry]
name = "IreneBot"
version = "2.0"
description = "The client for the discord bot Irene."
authors = ["MujyKun <mujy@irenebot.com>", "A-Phamfam <alextampham3000@gmail.com>"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
]
readme = "README.md"
homepage = "https://irenebot.com/"
repository = "https://github.com/MujyKun/IreneBot"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.8.1"
asyncpg = "0.25.0"
python-dotenv = "0.20.0"
pre-commit = "2.19.0"
mypy = "0.961"
numexpr = "^2.8.1"
# ireneapiwrapper = "2.29"

ireneapiwrapper = {git = "https://github.com/MujyKun/IreneAPIWrapper.git"}
disnake = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"